# simrail-scenarioeditor

./: LICENSE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: index.tsx  router.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
src/assets/: global.scss
src/assets/json/: commands.json  signals.json  stations.json
src/components/: index.ts
src/components/breadcrumb/: breadcrumb.scss  breadcrumb.tsx  index.ts
src/components/datalists/: datalists.tsx  index.ts
src/components/dropdown/: dropdown.scss  dropdown.tsx  index.ts
src/components/entity-box/: entity-box.scss  entity-box.tsx  index.ts
src/components/entity-icon/: entity-icon.scss  entity-icon.tsx  index.ts
src/components/field/: field.scss  index.ts
src/components/form/: form.scss  index.ts
src/components/modal/: index.ts  modal.scss  modal.tsx
src/components/space/: index.ts  space.scss  space.tsx
src/components/toast/: index.ts  toast.scss  toast.tsx
src/components/traffic-command-editor/: index.ts  traffic-command-editor.scss  traffic-command-editor.tsx
src/components/welcome-screen/: index.ts  welcome-screen.scss  welcome-screen.tsx
src/entity/editor/: index.ts  mission-file.ts  scenario-manifest.ts  timetable-file.ts  waypoint.ts
src/entity/scenario/: action.ts  condition.ts  content.ts  entity-type.ts  entity.ts  event.ts  index.ts  language-content.ts  timer.ts  (+7 more)
src/helper/: create-entity-or-reference.ts  index.ts  move-down.ts  move-up.ts  open-scenario.ts  update-entity.ts  xml-parser.ts
src/redux/: store.ts
(+110 files in other folders)
